new barChart, and adjust sidebar

--- a/frontend/src/componentes/NavBar/NavBar.css
+++ b/frontend/src/componentes/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #060b26;
+    background-color: #1f252c;
     height: 80px;
     display: flex;
     justify-content: flex-start;
@@ -25,8 +25,9 @@
   }
   
   .nav-menu.active {
+    background-color: #1f252c;
     left: 0;
-    transition: 350ms;
+    transition: 700ms;
   }
   
   .nav-text {
@@ -59,7 +60,7 @@
   }
   
   .navbar-toggle {
-    background-color: #060b26;
+    background-color: #1f252c;
     width: 100%;
     height: 80px;
     display: flex;
